# VMware-Log-Insight

./: .gitignore  Dockerfile  README-CN.md  README.md  RELEASE_NOTES.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml  server.json
examples/mcp-configs/: claude-code.json
mcp_server/: __init__.py  _shared.py  server.py
mcp_server/tools/: __init__.py  alerts.py  logs.py
skills/vmware-log-insight/: SKILL.md
skills/vmware-log-insight/references/: agent-guardrails.md  capabilities.md  cli-reference.md  setup-guide.md
tests/: test_connection_errors.py  test_constraints.py  test_ops_shapes.py  test_safe_error_passthrough.py
tests/eval/capability/: _scores.json  _skill.py
tests/eval/regression/: test_credential_env_override.py  test_declared_environment.py  test_env_secret_obfuscation.py  test_loginsight_regressions.py  test_read_only_mode.py  test_result_envelope.py
tests/eval/spec/: api_index.py  test_spec_conformance.py
vmware_log_insight/: __init__.py  cli.py  config.py  connection.py  constraints.py  doctor.py
vmware_log_insight/mcp_server/: _shared.py  server.py
vmware_log_insight/mcp_server/tools/: alerts.py  logs.py
vmware_log_insight/ops/: __init__.py  aggregate.py  alerts.py  fields.py  search.py
