[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmware-log-insight"
version = "1.8.5"
description = "VMware Aria Operations for Logs (vRealize Log Insight) read-only log search, aggregation, and alert queries — MCP + CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Wei Zhou", email = "wei-wz.zhou@broadcom.com" }]
keywords = ["vmware", "aria", "log-insight", "vrealize", "logs", "siem", "mcp", "ai-ops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<15.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "mcp[cli]>=1.10,<2.0",
    "vmware-policy>=1.8.5,<2.0",
]

[project.scripts]
vmware-log-insight = "vmware_log_insight.cli:app"
vmware-log-insight-mcp = "vmware_log_insight.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["vmware_log_insight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "capability: Capability evals — scored trends, not pass/fail gates. Excluded from the default run (they measure quality, so <100% is expected and must not read as a broken build). Run them with: pytest -m capability",
]
addopts = "-m 'not capability'"
[dependency-groups]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<8.0",
    "ruff>=0.5,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
